sock-shop-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
        - capstone.utibeokon.me
      secretName: letsencrypt-nginx-htnxv
  ingressClassName: nginx
  rules:
    - host: capstone.utibeokon.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80











            
                  
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example
#   namespace: sock-shop
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: www.example.com
#       http:
#         paths:
#           - backend:
#               service:
#                 name: example-service
#                 port:
#                   number: 80
#             path: /
#             pathType: Prefix
#   # This section is only required if TLS is to be enabled for the Ingress
#   tls:
#       - hosts:
#           - www.example.com
#         secretName: example-tls
